--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+/vendor
+composer.lock
+/phpunit.xml
+.phpunit.result.cache
 /.phpunit.cache
 /bootstrap/ssr
 /node_modules
@@ -5,8 +9,6 @@
 /public/hot
 /public/storage
 /storage/*.key
-/vendor
-.phpunit.result.cache
 Homestead.json
 Homestead.yaml
 auth.json
