--- a/.styleci.yml
+++ b/.styleci.yml
@@ -1,4 +1,8 @@
-preset: laravel
-
-disabled:
-  - single_class_element_per_statement
+php:
+  preset: laravel
+js:
+  finder:
+    not-name:
+      - vite.config.js
+css: true
+vue: true
