--- a/composer.json
+++ b/composer.json
@@ -16,8 +16,12 @@
         }
     ],
     "require": {
-        "php": "^8.2",
-        "illuminate/support": "^11.0"
+        "php": "^8.2.0",
+        "illuminate/console": "^11.0",
+        "illuminate/filesystem": "^11.0",
+        "illuminate/support": "^11.0",
+        "illuminate/validation": "^11.0",
+        "symfony/console": "^7.0"
     },
     "require-dev": {
         "orchestra/testbench": "^9.0",
@@ -28,16 +32,6 @@
             "Laltu\\LaravelUi\\": "src"
         }
     },
-    "autoload-dev": {
-        "psr-4": {
-            "Laltu\\LaravelUi\\Tests\\": "tests"
-        }
-    },
-    "scripts": {
-        "test": "vendor/bin/phpunit",
-        "test-coverage": "vendor/bin/phpunit --coverage-html coverage"
-
-    },
     "config": {
         "sort-packages": true
     },
@@ -45,10 +39,9 @@
         "laravel": {
             "providers": [
                 "Laltu\\LaravelUi\\LaravelUiServiceProvider"
-            ],
-            "aliases": {
-                "LaravelUi": "Laltu\\LaravelUi\\LaravelUiFacade"
-            }
+            ]
         }
-    }
+    },
+    "minimum-stability": "dev",
+    "prefer-stable": true
 }
